tests/rspack-test/configCases/errors/generator-generate-error/test.filter.js
module.exports = () => "FIXME: missing assets";
